# measurecamp-2023

./: README.md
py/: pyproject.toml
py/src/: main.py
rs/: Cargo.toml
rs/src/: main.rs
