[tool.poetry]
name = "pyweather"
version = "0.1.0"
description = ""
authors = ["Sam Kenney <sam.kenney@louder.com.au>"]

[tool.poetry.scripts]
hello-py = "src.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
pydantic = "^2.4.2"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
